--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -63,6 +63,9 @@
     border-bottom: 2px solid lighten(@gray-base, 70.0%);
     padding-left: 8px;
   }
+  ul.menu li.last a {
+    border-bottom: none;
+  }
 }
 
 
