--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -163,9 +163,10 @@
 
 .pane-menu-menu-genveje {
   ul {
-    max-height: 456px;
+    max-height: 513px;
     overflow: scroll;
     margin: 0 -20px;
+    -webkit-overflow-scrolling: touch;
     li {
       margin: 0;
       a {
