--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/wrapper.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/page-layout/wrapper.less
@@ -26,7 +26,7 @@
 
 // Content
 .content {
-    padding: @grid-gutter-width 0;
+    padding: 10px 0;
 }
 
 // --------------------------------------------------
