--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -38,8 +38,12 @@
       }
     }
   }
+  .os2sub-box-heading {
+    padding-bottom: 10px;
+  }
   .os2sub-box-body {
     padding-bottom: 0;
+    padding-top: 0px;
   }
   &.pane-menu-menu-links {
     ul.menu {
