--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -70,6 +70,9 @@
   ul.menu li.last a {
     border-bottom: none;
   }
+  ul.menu li.first a {
+    border-top: 2px solid lighten(@gray-base, 70.0%);
+  }
 }
 
 
@@ -167,7 +170,7 @@
 
 .pane-menu-menu-genveje {
   ul {
-    max-height: 513px;
+    max-height: 530px;
     overflow: scroll;
     margin: 0 -20px;
     -webkit-overflow-scrolling: touch;
