--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -75,7 +75,11 @@
   }
 }
 
-
+.akut.knap a {
+  height: 70px;
+  line-height: 50px;
+  background: url(../img/icons/menu/medical-kit.svg) no-repeat left 50%;
+}
 
 .main-navigation-bar {
   .menu-knapper {
