--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -78,7 +78,10 @@
 .akut.knap a {
   height: 70px;
   line-height: 50px;
-  background: url(../img/icons/menu/medical-kit.svg) no-repeat left 50%;
+  background: url(../img/icons/menu/medical-kit.svg) no-repeat left 5px;
+  background-size: 80px;
+  ba
+  background-color: #6b2d52;
 }
 
 .main-navigation-bar {
