--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -78,10 +78,10 @@
 .akut.knap a {
   height: 70px;
   line-height: 50px;
-  background: url(../img/icons/menu/medical-kit.svg) no-repeat left 5px;
+  background-image: url(../img/icons/menu/medical-kit.svg) no-repeat left 5px;
   background-size: 80px;
-  ba
   background-color: #6b2d52;
+  font-size: 20px;
 }
 
 .main-navigation-bar {
@@ -581,7 +581,6 @@
     width: 80%;
     float: left;
   }
-  .panel-pane.knap .btn-lg,
   .linkmenuer ul.menu li a {
     font-size: 90%;
   }
@@ -608,7 +607,6 @@
     width: 80%;
     float: left;
   }
-  .panel-pane.knap .btn-lg,
   .linkmenuer ul.menu li a {
     font-size: 100%;
   }
