--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -78,9 +78,8 @@
 .akut.knap a {
   height: 70px;
   line-height: 50px;
-  background-image: url(../img/icons/menu/medical-kit.svg) no-repeat left 5px;
+  background: url(../img/icons/menu/medical-kit.svg) no-repeat left 5px #6b2d52;;
   background-size: 80px;
-  background-color: #6b2d52;
   font-size: 20px;
 }
 
