--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -82,7 +82,10 @@
   background-size: 80px;
   font-size: 20px;
 }
-
+.view-id-seniorportalen_nyhedsliste.view-display-id-block {
+  height: 188px;
+  overflow: auto;
+}
 .main-navigation-bar {
   .menu-knapper {
     .main-navigation-list {
