--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -180,7 +180,8 @@
 .pane-menu-menu-genveje {
   ul {
     max-height: 525px;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     margin: 0 -20px;
     -webkit-overflow-scrolling: touch;
     li {
