--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -83,8 +83,17 @@
   font-size: 20px;
 }
 .view-id-seniorportalen_nyhedsliste.view-display-id-block {
-  height: 188px;
-  overflow: auto;
+  .view-content {
+    height: 318px;
+    overflow: auto;
+    .views-row {
+      margin-bottom: 10px;
+    }
+  }
+  .pane-title {
+    margin-top: 0;
+    padding-top: 0;
+  }
 }
 .main-navigation-bar {
   .menu-knapper {
