Afstand til spotboxe

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -74,7 +74,9 @@
     border-top: 2px solid lighten(@gray-base, 70.0%);
   }
 }
-
+.pane-node-content .os2sub-box {
+  margin-bottom: 20px;
+}
 .akut.knap a {
   height: 70px;
   line-height: 50px;
