--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -40,6 +40,7 @@
   }
   .os2sub-box-heading {
     padding-bottom: 10px;
+    padding-left: 10px;
   }
   .os2sub-box-body {
     padding-bottom: 0;
