--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -328,6 +328,7 @@
 	padding: @padding-base-horizontal;
 	color: #ccc;
 	border-radius: 3px 3px 0 0;
+	font-size: 0.7em;
 	.contact-information {
 		clear: both;
 		text-align: center;
