--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -265,6 +265,16 @@
       a {
         border: 2px solid lighten(@gray-base, 70.0%);
         padding: 5px 15px;
+        &.btn-lg {
+          padding-left: 3em;
+          font-size: 1.2em;
+          font-family: Arial,'Source Sans Pro',sans-serif;
+          padding: 10px 20px;
+          font-weight: bold;
+          &:before {
+            font: normal normal normal 14px/1 FontAwesome;
+          }
+        }
       }
     }
   }
