--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -307,7 +307,11 @@
   }
 }
 
-
+.scrolltext {
+  background-color: @brand-primary-light;
+  padding: 10px;
+  width: auto;
+}
 
 .field-name-field-os2web-base-field-spotbox.field-type-node-reference {
   .field-items {
