--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -308,10 +308,13 @@
 }
 
 .scrolltext {
-  background-color: @brand-primary-light;
-  padding: 10px;
+  background-color: #b3b3b3;
+  padding: 5px 10px;
   width: auto;
+  margin: 0 -20px;
+  text-align: center;
 }
+
 
 .field-name-field-os2web-base-field-spotbox.field-type-node-reference {
   .field-items {
