--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -320,6 +320,7 @@
   .field-items {
     .make-row();
     .field-item {
+      .make-sm-column(6);
       .make-md-column(4);
       max-width: 300px;
       max-height: 150px;
@@ -329,6 +330,10 @@
 }
 
 @media @media-query-mobile-only {
+  .main-content-area .row {
+    display: flex;
+    flex-direction: column;
+  }
   .field-name-field-os2web-base-field-spotbox.field-type-node-reference {
   .field-items {
     .make-row();
