Banner teskt på forsiden

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -245,11 +245,9 @@
   }
 }
 
-.front {
-  .pane-seniorportalen-nyhedsliste {
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-  }
+.pane-seniorportalen-nyhedsliste {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
 }
 
 .toplinks {
@@ -333,6 +331,9 @@
   .main-content-area .row {
     display: flex;
     flex-direction: column;
+  }
+  .view-id-seniorportalen_nyhedsliste.view-display-id-block .view-content {
+    height: auto;
   }
   .field-name-field-os2web-base-field-spotbox.field-type-node-reference {
   .field-items {
