--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
@@ -119,19 +119,17 @@
       .banner-headline {
         position: absolute;
         bottom: 0;
-    		font-size: floor((@bs3-designer-icon-font-size * 1.1));
+    		font-size: floor((@bs3-designer-icon-font-size * 1.25));
         line-height: normal;        
         align-items: center;
         text-decoration: none;
         margin: 0;
         padding: 0;
         color: #fff;
-        font-size: 20px;
         font-weight: normal;
         display: flex;
         justify-content: flex-start;
-        padding-left: 10px;
-        
+        padding-left: (@border-radius-base * 2);
         background: rgba(107,45,82,1);
         width: 100%;
         height: 50px;
