--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/template/elements/spot-banner.less
@@ -313,7 +313,13 @@
 
 // Mobile - only
 @media @media-query-mobile-only {
-
+.node-banner {
+  &.view-mode-teaser {
+      .banner-headline {
+    		font-size: floor((@bs3-designer-icon-font-size * 1.1));
+      }
+    }
+  }
 }
 
 // Tablet
