--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -251,7 +251,10 @@
   .os2sub-box.pane-seniorportalen-nyhedsliste {
     .os2sub-box-body {
       padding-left: 5px;
-      .pane-seniorportalen-nyhedsliste li a {
+      padding-right: 3px;
+      overflow: auto;
+      overflow-x: hidden;
+      li a {
         word-break: break-all;
       }
     }
