--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -255,7 +255,7 @@
       overflow: auto;
       overflow-x: hidden;
       li a {
-        word-break: break-all;
+        word-break: break-word;
       }
     }
   }
