Logo for bredt til alle mobiler

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -246,7 +246,10 @@
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
 }
-
+img.main-navigation-logo-image {
+  max-width: 100%;
+  height: auto;
+}
 @media @media-query-tablet-only {
   .os2sub-box.pane-seniorportalen-nyhedsliste {
     .os2sub-box-body {
