--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -243,8 +243,8 @@
       margin-left: -13px;
       color: @brand-primary;
   }
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
+  border-top-left-radius: 6px !important;
+  border-top-right-radius: 6px !important;
 }
 img.main-navigation-logo-image {
   max-width: 90%;
@@ -261,6 +261,9 @@ img.main-navigation-logo-image {
         word-break: break-word;
       }
     }
+  }
+  .pane-1.knap .btn-lg {
+    font-size: 100%;
   }
 }
 @media @media-query-mobile-only {
