Store kanpper skal ha mindre skrift på tablet

--- a/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
+++ b/public_html/profiles/os2sub/themes/subsite_2/src/less/stylesheet.less
@@ -262,8 +262,9 @@ img.main-navigation-logo-image {
       }
     }
   }
+  .pane-4.kna .btn-lg,
   .pane-1.knap .btn-lg {
-    font-size: 100%;
+    font-size: 95%;
   }
 }
 @media @media-query-mobile-only {
