--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-header.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-header.scss
@@ -48,6 +48,17 @@ $lg-flexy-header-static-row-second-height: 60px;
   }
 }
 
+.flexy-header__navigation__wrapper--full-width {
+
+  .flexy-navigation {
+    @extend .flexy-navigation--full-width;
+
+    .flexy-navigation__item__dropdown-menu {
+      display: none; // Temporary hack until SYDDK-498 - full width is also applied to submenu because of
+    }
+  }
+}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
