--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_loader.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_loader.scss
@@ -1,6 +1,7 @@
 @import "sectioned/loader";
 
 @import "flexy-header";
+@import "flexy-navigation";
 @import "sidr";
 @import "slinky-menu";
 @import "footer";
