--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_sitemap.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_sitemap.scss
@@ -45,7 +45,8 @@
       padding: 5px 0;
 
       &,
-      &:hover {
+      &:hover,
+      &:focus {
         background-color: transparent;
       }
     }
