--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_bootstrap.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_bootstrap.scss
@@ -808,12 +808,12 @@ $breadcrumb-separator:          "-";
 //
 //##
 
-$carousel-text-shadow:                        0 1px 2px rgba(0,0,0,.6) !default;
+$carousel-text-shadow:                        none;
 
 $carousel-control-color:                      #fff !default;
 $carousel-control-width:                      15% !default;
 $carousel-control-opacity:                    .5 !default;
-$carousel-control-font-size:                  20px !default;
+$carousel-control-font-size:                  140px;
 
 $carousel-indicator-active-bg:                #fff !default;
 $carousel-indicator-border-color:             #fff !default;
