--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_banner.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_banner.scss
@@ -23,12 +23,11 @@
 .sectioned--banner {
 
   .sectioned__inner {
-    min-height: 400px;
+    min-height: 300px;
   }
 
   .field-name-field-banner-headline {
     @extend .heading-h1;
-    font-size: 70px;
 
     color: #fff;
   }
@@ -56,10 +55,6 @@
       }
     }
   }
-
-  .container {
-    max-width: calc(100% - 30%);
-  }
 }
 
 // --------------------------------------------------
@@ -77,7 +72,19 @@
 @media #{$breakpoint-mobile-only} {}
 
 // Tablet - and up
-@media #{$breakpoint-tablet-and-up} {}
+@media #{$breakpoint-tablet-and-up} {
+
+  .sectioned--banner {
+
+    .sectioned__inner {
+      min-height: 400px;
+    }
+
+    .field-name-field-banner-headline {
+      font-size: 70px;
+    }
+  }
+}
 
 // Tablet - only
 @media #{$breakpoint-tablet-only} {}
