SYDDK-499 - responsive navigation

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_sidr.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_sidr.scss
@@ -23,9 +23,10 @@
 .sidr {
 
   .logo {
+    padding: 10px floor( ( $grid-gutter-width / 2 ) );
 
     img {
-      max-height: 80px;
+      max-height: 50px;
     }
   }
 
