--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_loader.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_loader.scss
@@ -5,6 +5,7 @@
 @import "additional-bootstrap-colors";
 @import "typography-helper";
 @import "sidr-bootstrap-theme";
+@import "slinky-bootstrap-theme";
 @import "flexy-header";
 @import "flexy-navigation";
 @import "flexy-list";
