--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-navigation.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-navigation.scss
@@ -62,6 +62,8 @@
 
 .flexy-navigation__item--primary {
 
+  &.active,
+  &.active-trail,
   &:hover {
 
     &:after {
@@ -72,6 +74,8 @@
 
 .flexy-navigation__item--secondary {
 
+  &.active,
+  &.active-trail,
   &:hover {
 
     &:after {
@@ -82,6 +86,8 @@
 
 .flexy-navigation__item--tertiary {
 
+  &.active,
+  &.active-trail,
   &:hover {
 
     &:after {
@@ -92,6 +98,8 @@
 
 .flexy-navigation__item--quaternary {
 
+  &.active,
+  &.active-trail,
   &:hover {
 
     &:after {
