SYDDK-496 - header second row
Apply transitions for active, active-trail and :hover markers

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-navigation.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-navigation.scss
@@ -53,6 +53,8 @@
     content: "";
 
     background-color: transparent;
+
+    transition: background-color $transition-time-short ease-in-out;
   }
 }
 
