--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_flexy-navigation.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_flexy-navigation.scss
@@ -27,7 +27,7 @@ $flexy-navigation-item-dropdown-megamenu-box-shadow: none !default;
 // Dropdown menu
 $flexy-navigation-item-dropdown-menu-zindex: $zindex-dropdown !default;
 $flexy-navigation-item-dropdown-menu-background-color: $body-bg !default;
-$flexy-navigation-item-dropdown-menu-box-shadow: 1px 2px 6px rgba(0, 0, 0, .4) !default;
+$flexy-navigation-item-dropdown-menu-box-shadow: none;
 
 $flexy-navigation-item-dropdown-menu-item-link-font-family: $font-family-base !default;
 $flexy-navigation-item-dropdown-menu-item-link-font-size: $font-size-base !default;
