--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_additional-bootstrap-colors.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_additional-bootstrap-colors.scss
@@ -48,7 +48,7 @@ $panel-tertiary-border: $brand-tertiary !default;
 $panel-tertiary-heading-bg: $brand-tertiary !default;
 
 // Quternary
-$brand-quaternary: $body-bg-tertiary;
+$brand-quaternary: #0088ab;
 
 $btn-quaternary-color: #fff !default;
 $btn-quaternary-bg: $brand-quaternary !default;
