SYDDK-498 - dropdown megamenu

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-navigation.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_flexy-navigation.scss
@@ -92,7 +92,7 @@ $flexy-navigation-dropdown-menu-toggle-width: 60px;
 
   margin-top: -1px;
   padding-top: floor( ( $grid-gutter-width / 2 ) );
-  padding-bottom: $flexy-navigation-dropdown-menu-toggle-height;
+  padding-bottom: floor( ( ( $grid-gutter-width / 2 ) + $flexy-navigation-dropdown-menu-toggle-height ) );
 
   border-top: 1px solid $border-color;
 
