--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
@@ -39,6 +39,13 @@ img {
     }
 }
 
+.menu {
+
+    .menu--hide {
+        display: none;
+    }
+}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
