--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_sitemap.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/sectioned/_sitemap.scss
@@ -39,6 +39,10 @@
 
   .menu {
 
+    .menu--hide {
+      display: none;
+    }
+
     > li {
       margin-bottom: floor( ( $grid-gutter-width / 2 ) );
 
