SYDDK-486 - event teaser

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/_overrides.scss
@@ -81,20 +81,24 @@ img {
 .flexbox {
 
     .row--equal-height-columns {
-        display: flex;
 
-        flex-wrap: wrap;
-
-        > [class*='col-'] {
+        &:not(.view),
+        > .view-content {
             display: flex;
-        
-            flex-direction: column;
-        }
 
-        // Fixes Safari issue (https://stackoverflow.com/questions/34250282/flexbox-safari-bug-flex-wrap)
-        &:after,
-        &:before {
-            content: normal; // IE doesn't support `initial`
+            flex-wrap: wrap;
+
+            > [class*='col-'] {
+                display: flex;
+
+                flex-direction: column;
+            }
+
+            // Fixes Safari issue (https://stackoverflow.com/questions/34250282/flexbox-safari-bug-flex-wrap)
+            &:after,
+            &:before {
+                content: normal; // IE doesn't support `initial`
+            }
         }
     }
 }
