--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/entity/teaser/_teaser.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/entity/teaser/_teaser.scss
@@ -11,6 +11,8 @@
 // --------------------------------------------------
 
 $entity-teaser-background-color: $body-bg-secondary;
+$entity-teaser-body-padding-top-bottom: floor( ( $grid-gutter-width / 2 ) );
+$entity-teaser-body-padding-left-right: floor( ( $grid-gutter-width / 2 ) );
 
 // --------------------------------------------------
 // Mixins
@@ -23,9 +25,29 @@ $entity-teaser-background-color: $body-bg-secondary;
 // --------------------------------------------------
 
 .entity-teaser {
+  margin-bottom: $grid-gutter-width;
+
   border-radius: $border-radius-base;
 
   background-color: $entity-teaser-background-color;
+}
+
+.entity-teaser__date {
+  width: 100px;
+
+  padding: 10px;
+
+  text-align: center;
+
+  border-radius: $border-radius-base;
+  border: 2px solid $text-color;
+
+  .field {
+    @extend .heading-h4;
+
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .entity-teaser__image {
@@ -33,6 +55,16 @@ $entity-teaser-background-color: $body-bg-secondary;
   img {
     width: 100%;
   }
+}
+
+.entity-teaser__heading {}
+.entity-teaser__heading__title {
+  padding: 0;
+  margin: 0;
+}
+
+.entity-teaser__body {
+  padding: $entity-teaser-body-padding-top-bottom $entity-teaser-body-padding-left-right;
 }
 
 // --------------------------------------------------
