SYDDK-487 - location teaser

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_loader.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_loader.scss
@@ -1,8 +1,9 @@
 @import "custom";
 @import "bootstrap";
 @import "font-awesome";
-
 @import "additional-bootstrap-colors";
+@import "customer-specific";
+
 @import "typography-helper";
 @import "sidr-bootstrap-theme";
 @import "slinky-bootstrap-theme";
