--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_bootstrap.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/variables/_bootstrap.scss
@@ -51,14 +51,14 @@ $font-family-base:        $font-family-sans-serif !default;
 
 $font-size-base:          16px;
 $font-size-large:         18px;
-$font-size-small:         12px;
+$font-size-small:         14px;
 
 $font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
 $font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
 $font-size-h3:            26px;
 $font-size-h4:            22px;
-$font-size-h5:            $font-size-base !default;
-$font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-h5:            $font-size-large;
+$font-size-h6:            $font-size-base;
 
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base:        1.428571429 !default; // 20/14
