SYDDK-492 - boxy variants

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/boxy/_shadow.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/boxy/_shadow.scss
@@ -1,9 +1,9 @@
 // |--------------------------------------------------------------------------
-// | Bordered
+// | Shadow
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .boxy--bordered
+// | - .boxy--shadow
 // |
 
 // --------------------------------------------------
@@ -14,13 +14,13 @@
 // Mixins
 // --------------------------------------------------
 
-@mixin boxy-bordered-mixin() {}
+@mixin boxy-shadow-mixin() {}
 
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
 
-.boxy--bordered {
+.boxy--shadow {
 
   .boxy__body {
     border: 0;
