SYDDK-492 - panel variants

--- a/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_loader.scss
+++ b/public_html/profiles/os2sub/themes/subsite_3/src/styles/theme/components/_loader.scss
@@ -1,5 +1,6 @@
 @import "sectioned/loader";
 @import "boxy/loader";
+@import "panels-layout/loader";
 
 @import "flexy-header";
 @import "flexy-navigation";
